--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,34 @@ p {
   color: white;
   font-size: 38px;
 }
+
+.wallet-container {
+  display: flex;
+  align-items: center;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 0 auto;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.document-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  height: 100vh;
+  cursor: pointer;
+  overflow: auto;
+}
+
+.docs-image {
+  margin-top: 50px;
+}
